# gl-rs

src/gl_generator/: Cargo.toml  lib.rs  registry.rs
src/gl_generator/generators/: mod.rs
