[package]

name = "gl_generator"
version = "0.0.1"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>",
        "Corey Richardson",
        "Arseny Kapoulkine"
]

[[lib]]

name = "gl_generator"
plugin = true
path = "src/gl_generator.rs"

[dependencies.rust-xml]
git = "https://github.com/netvl/rust-xml"

